@@ -11,6 +11,7 @@ EAPI extern const Eo_Event_Description ELM_CODE_EVENT_FILE_LOAD_DONE;
 
 typedef enum {
    ELM_CODE_STATUS_TYPE_DEFAULT = 0,
+   ELM_CODE_STATUS_TYPE_CURRENT,
    ELM_CODE_STATUS_TYPE_IGNORED,
    ELM_CODE_STATUS_TYPE_NOTE,
    ELM_CODE_STATUS_TYPE_WARNING,
